Add classes and types separators

--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
     <h1>Odin Recipes</h1>
     <div class="logo">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmukFTal1VcJ-mN330PEoZ01rnAs90_C5R4g&s" alt="theodinproject logo">
-    </div>   
-    <li><a href="./recipes/fried-chicken.html" target="_blank">Fried Chicken</a></li>
-    <img id="fried-chicken" src="https://www.allrecipes.com/thmb/ZnNoScrM0Vwb6S0K0hc00BZjqhs=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/220128-chef-johns-buttermilk-fried-chicken-032-4x3-4880a8665b4b4f008d108728111923ea.jpg" alt="Buttermilk Fried Chicken"> 
+    </div>
+    <div class="list-container">
+    <li><a href="./recipes/fried-chicken.html" target="_blank">Fried Chicken</a></li> 
     <li><a href="./recipes/potato-salad.html" target="_blank">Potato Salad</a></li>
-    <img id="potato-salad" src="https://www.allrecipes.com/thmb/arlD5NIE_gnLCamR4Kp0IwnLCs8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/86662_Worlds-Best-Potato-Salad_ddmfs_4x3_0984-c6a9a6eb6b30483b8f8caa731ea77d61.jpg" alt="Potato Salad">
-    <li><a href="./recipes/corn-cob.html" target="_blank">Corn on the Cob</a></li>
-    <img id="corn-cob" src="./images/corn-cob_image.jpg" alt="Corn on the Cob"> 
+    <li><a href="./recipes/corn-cob.html" target="_blank">Corn on the Cob</a></li> 
+    </div>
+    <div>
+    <img class="photo" src="https://www.allrecipes.com/thmb/ZnNoScrM0Vwb6S0K0hc00BZjqhs=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/220128-chef-johns-buttermilk-fried-chicken-032-4x3-4880a8665b4b4f008d108728111923ea.jpg" alt="Buttermilk Fried Chicken">
+    <img class="photo" src="https://www.allrecipes.com/thmb/arlD5NIE_gnLCamR4Kp0IwnLCs8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/86662_Worlds-Best-Potato-Salad_ddmfs_4x3_0984-c6a9a6eb6b30483b8f8caa731ea77d61.jpg" alt="Potato Salad">
+    <img class="photo" src="./images/corn-cob_image.jpg" alt="Corn on the Cob">
+    </div>
 </body>
 </html>
